# recapn-bench

./: .gitignore  .gitmodules  Cargo.toml  README.md  wrapper.h
build-helper/: Cargo.toml
build-helper/src/: lib.rs
c++/: address_book.cpp  all_types.cpp  lib.cpp  recapn_bench_cpp.h
capnp/: addressbook.capnp  all_types.capnp
cpp-gen/: Cargo.toml  build.rs
cpp-gen/src/: lib.rs
cpp-interop/: Cargo.toml  build.rs
cpp-interop/src/: all_types.rs  lib.rs
fuzz-models/: Cargo.toml  build.rs  fuzz_models.h
fuzz-models/src/: lib.rs
recapn-bench/: Cargo.toml  README.md  buildf.rs
recapn-bench/fuzz/: Cargo.toml
recapn-bench/fuzz/fuzz_targets/: fuzz_all_types.rs
recapn-bench/src/: all_types.rs  cargo_cli.rs  fuzz_flat.rs  fuzzing.rs  hello.rs  lib.rs  main.rs
rust-old-capnp/: Cargo.toml  build.rs
rust-old-capnp/src/: address_book.rs  all_types.rs  lib.rs
rust-recapn/: Cargo.toml  build.rs  capnp
rust-recapn/src/: address_book.rs  all_types.rs  lib.rs
