[package]
name = "recapn-bench-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
fuzz-models = { path = "../../fuzz-models", features = ["arbitrary"] }
recapn-bench = { path = ".." }


[[bin]]
name = "all_types"
path = "fuzz_targets/fuzz_all_types.rs"
test = false
doc = false
bench = false
